--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</main>
 	<div class="attribution">
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-		<br>Coded by <a href="https://fb.me/IsaacMHP2001">Isaac Herrera</a>.
+		<br>Coded by <a href="https://github.com/MOSHE9647" target="_blank">Moshe9647</a>.
 	</div>
 </body>
 </html>
